--- a/yan.tex
+++ b/yan.tex
@@ -223,12 +223,24 @@ Very much in the spirit of Ref.~\cite{Hu:1998kj} we would like to be guided by s
 %%%%%%%%%%%%%%%%%%%%% BODY %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
+\input{temp_polish/body_by_diego.tex}
 
 %%%%%%%%%%%%%%%%%% APPENDIX %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \appendix 
 \input{temp_polish/conventions.tex}
+\newpage
+\input{temp_polish/thermodynamic_formulas.tex}
+\input{temp_polish/quadratic_action_curved_spacetime.tex}
+
+\newpage
+\input{temp_polish/recovering_familiar_fluids.tex}
+
+\newpage
 \input{temp_polish/phonons_comoving_curvature.tex}
+
+\newpage
+\input{temp_polish/matching_scalar_field.tex}
 
 
 
