--- a/temp_polish/matching_scalar_field.tex
+++ b/temp_polish/matching_scalar_field.tex
@@ -1,5 +1,5 @@
 %============================================================================
-\section{Matching the quintessence field (after 13 Feb discussion)}
+\section{Matching the quintessence field (in progress)}
 %============================================================================
 
 In the 5-essence case we can express kinetic energy and potential in terms of energy density and pressure. 
@@ -22,7 +22,7 @@ Namely expanding $\varphi=\bar{\varphi}+\delta\varphi$ we have\todotag{check con
 \begin{align}
     (\rho+p)\,\vec{v}_\phi\approx a^{-2}\dot{\bar{\varphi}}\vec{\nabla} \delta\varphi.
 \end{align}
-From \eqref{eq:peculiar_velocity_via_phonons} we then identify
+From \eqref{eq:peculiar_velocity_fluid_vs_phonons} we then identify
 \begin{align}\label{eq:identifying_scalar_field_velocity_vs_phonon}
     v_\varphi = -\dot{\pi}_L\, \quad\text{that is}\quad \theta_\varphi=-\partial_j\dot{\pi}^j=k^2\dot{\pi}_L
 \end{align}
