--- a/temp_polish/phonons_comoving_curvature.tex
+++ b/temp_polish/phonons_comoving_curvature.tex
@@ -1,12 +1,12 @@
 %-------------------------------------------------------------------------
 %======================================================================
-\section{Superhorizon conservation of curvature perturbations from phonon EoM}
+\section{Superhorizon conservation of curvature perturbations from phonon EoM (in progress)}
 %======================================================================
 %---------------------------------------------------------------------------
 A distinctive feature of \emph{adiabatic} perturbations is that they are conserved in the superhorizon limit.
 We would like to show this explicitly from the EoM of phonons.
 
-From \label{eq:peculiar_velocity_via_phonons} we identify the comoving curvature perturbations \eqref{eq:comoving_curvature_perturbations_gauge_inv_and_newtonian} in terms of metric potentials and phonon potential
+From \eqref{eq:peculiar_velocity_fluid_vs_phonons} we identify the comoving curvature perturbations \eqref{eq:comoving_curvature_perturbations_gauge_inv_and_newtonian} in terms of metric newtonian potentials and phonon potential \eqref{eq:phonon_potential} as
 \begin{equation}
     \mathcal{R} \overset{\text{Newt.}}{=} \phi -\mathcal{H}v = \phi + \mathcal{H}\,\dot{\pi}_L\,.
 \end{equation}
@@ -32,7 +32,7 @@ where
     &\qquad\qquad\cdot \bigg[(byF_{by}-yF_y) (\partial_j\pi^j)+\bigg(\tfrac{1}{a^4}\!\!\int(\partial_j \pi^j)\tfrac{d}{d\tau}(a^4yF_y)\bigg)\bigg]\,.
 \end{aligned}
 \end{align}}
-Taking $\psi=\phi$ at \emph{late times} and in the large scale limit, and simplifying terms we \todotag{write}finally get
+Taking $\psi=\phi$ at \emph{late times} and in the large scale limit, and simplifying terms we get\todotag{write}
 \begin{align}
     ...
 \end{align}
